chore: Java 21 モダナイゼーション + 技術的負債解消
Issue #3 の全項目を対応:

Java 21:
- compile target を 11 → 21 に引き上げ (pom.xml)
- instanceof pattern matching 適用 (5ファイル6箇所)
- Source.Origin → record 化 (-17行)
- Collections.emptyList() → List.of() (examples)

技術的負債:
- WildCardStringTerninatorParser → WildCardStringTerminatorParser
  (typo修正、クラス名リネーム、全参照+docs更新)

全674テスト通過。

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>